[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""axum-demo"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="axum-demo"
repository ="https://github.com/thor314/axum-demo"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
tracing = "0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
thiserror="1.0"
env_logger = "0.11"
dotenv = "0.15"
[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
